# System

./: .gitignore  pyproject.toml
System/: conversational.py  int_tts.py  main.py  sentience_ring.py  status.json
